<resources>
    <string name="app_name">MusicApp</string>
    <string name="notification_channel_name">Music Control</string>
    <string name="notification_channel_description">Provide control of music playback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album_cover">Album Cover</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="more">More</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="queue">Queue</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="collapse_player">Collapse player</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat_mode">Repeat Mode</string>
    <string name="settings">Settings</string>
</resources>