<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_album_cover"
        android:layout_width="@dimen/artwork_size"
        android:layout_height="@dimen/artwork_size"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_cover"
        app:shapeAppearance="@style/ShapeAlbumArtList"
        app:srcCompat="@drawable/ic_default_album_cover"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txt_artist"
            style="@style/TextAppearance.MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artist"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/img_btn_more"
        style="@style/ImageButton.Main"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/more"
        android:padding="5dp"
        app:srcCompat="@drawable/ic_more"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>